
Name:                Elm
Version:             0.7.1.1
Synopsis:            The Elm language module.
Description:         Elm aims to make client-side web-development more pleasant.
                     It is a statically/strongly typed, functional reactive
                     language to HTML, CSS, and JS. This package provides a
                     library for Elm compilation in Haskell and a compiler
                     executable.

Homepage:            http://elm-lang.org

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2011-2012 Evan Czaplicki

Category:            Compiler, Language

Build-type:          Simple

Extra-source-files:  changelog.txt
Data-files:          elm-runtime-0.7.1.1.js
Cabal-version:       >=1.8

source-repository head
  type:     git
  location: git://github.com/evancz/Elm.git

Library
  exposed-modules:     Language.Elm,
                       Language.Elm.Quasi
  Hs-Source-Dirs:      src, src/Gen
  other-modules:       Ast,
                       Context,
                       CompileToJS,
                       Cases,
                       Substitute,
                       ExtractNoscript,
                       GenerateHtml,
                       Guid,
                       Optimize,
                       Initialize,
                       Rename,
                       Parse.Binops,
                       Parse.Expr,
                       Parse.Foreign,
                       Parse.Library,
                       Parse.Modules,
                       Parse.Parser,
                       Parse.Patterns,
                       Parse.Types,
                       Types.Types,
                       Types.Constrain,
                       Types.Hints,
                       Types.Solver,
                       Types.Substitutions,
                       Types.Unify,
                       Paths_Elm

  Build-depends:       base >=4.2 && <5,
                       containers >= 0.3,
                       transformers >= 0.2,
                       mtl >= 2,
                       parsec >= 3.1.1,
                       blaze-html == 0.5.*,
                       blaze-markup == 0.5.1.*,
                       deepseq,
                       text,
                       template-haskell,
                       shakespeare >= 1,
                       pandoc >= 1.10,
                       bytestring,
                       hjsmin,
                       indents,
                       filepath

Executable elm
  Main-is:             Compiler.hs
  Hs-Source-Dirs:      src, src/Gen
  other-modules:       Ast,
                       Context,
                       CompileToJS,
                       Cases,
                       Substitute,
                       ExtractNoscript,
                       GenerateHtml,
                       Guid,
                       Optimize,
                       Initialize,
                       Rename,
                       Parse.Binops,
                       Parse.Expr,
                       Parse.Foreign,
                       Parse.Library,
                       Parse.Modules,
                       Parse.Parser,
                       Parse.Patterns,
                       Parse.Types,
                       Types.Types,
                       Types.Constrain,
                       Types.Hints,
                       Types.Solver,
                       Types.Substitutions,
                       Types.Unify,
                       Paths_Elm

  Build-depends:       base >=4.2 && <5,
                       containers >= 0.3,
                       transformers >= 0.2,
                       mtl >= 2,
                       parsec >= 3.1.1,
                       blaze-html == 0.5.*,
                       blaze-markup == 0.5.1.*,
                       deepseq,
                       cmdargs,
                       pandoc >= 1.10,
                       bytestring,
                       hjsmin,
                       indents,
                       filepath