Name:                elm-server
Version:             0.7
Synopsis:            The Elm language server.
Description:         This package provides a standalone, Happstack-based Elm server.

Homepage:            http://elm-lang.org

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2011-2012 Evan Czaplicki

Category:            Compiler, Language

Build-type:          Simple

--Extra-source-files:  README.md
Cabal-version:       >=1.6

source-repository head
  type:     git
  location: git://github.com/evancz/Elm.git

Executable elm-server
  Main-is:             Server.hs
  Build-depends:       base >=4.2 && <5,
                       containers >= 0.3,
                       transformers >= 0.2,
                       mtl >= 2,
                       parsec >= 3.1.1,
                       blaze-html >= 0.5.1,
                       HTTP >= 4000,
                       happstack-server == 7.1.1 || == 7.0.2,
                       deepseq,
                       filepath,
                       Elm >= 0.7
