Name:                elm-server
Version:             0.10.1
Synopsis:            The Elm language server.
Description:         This package provides a standalone, Happstack-based Elm server.

Homepage:            http://elm-lang.org

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2011-2014 Evan Czaplicki

Category:            Compiler, Language

Build-type:          Simple

--Extra-source-files:  README.md
Cabal-version:       >=1.8

source-repository head
  type:     git
  location: git://github.com/evancz/Elm.git

Executable elm-server
  Main-is:             Server.hs
  Build-depends:       base >=4.2 && <5,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       filepath,
                       Elm >= 0.11,
                       snap-core,
                       snap-server,
                       mtl,
                       process,
                       unordered-containers
